@@ -1,5 +1,6 @@
 import FWCore.ParameterSet.Config as cms
 
 EvFRecordInserter = cms.EDAnalyzer( "EvFRecordInserter",
+                                    inputTag = cms.InputTag("source")
 )
 
